--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hi
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://madonoxrblx.gitbook.io/photonframework-docs/'" />
+  </head>
+  <body>
+    <p>Please follow <a href="https://madonoxrblx.gitbook.io/photonframework-docs/">If you are not redirected to the new docs page, click here.</a>.</p>
+  </body>
+</html>
