--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta http-equiv="refresh" content="7; url='https://madonoxrblx.gitbook.io/photonframework-docs/'" />
   </head>
   <body>
+    <center>
+      <h1>New docs page, redirecting</h1>
     <p>Please follow <a href="https://madonoxrblx.gitbook.io/photonframework-docs/">If you are not redirected to the new docs page, click here.</a>.</p>
+    </center>
   </body>
 </html>
